trying to fix image on iphone

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11346,7 +11346,8 @@ body {
     width: 54.19px;
     height: 54.19px;
     border: none;
-    background: #E3EDF7;
+    background: url("/images/addToCart.svg") no-repeat center;
+    background-size: 26px !important;
     border-radius: 50%;
     box-shadow: -1px -1px 1px #FFFFFF, 0px 4px 4px rgba(38, 149, 151, 0.25), 1px 1px 1px #269597,-2px -2px 2px rgba(255, 255, 255, 0.7), 2px 2px 2px rgba(93, 148, 204, 0.25), inset 1px 1px 3px rgba(93, 148, 204, 0.25), inset -1px -1px 3px rgba(255, 255, 255, 0.8);
 }
@@ -12350,8 +12351,8 @@ input[type=radio]:checked {
 }
 
 .cart-image {
-    width: 95px !important;
-    height: 74px !important;
+    max-width: 100%;
+    height: 100%;
 }
 
 .cart-top-title {
@@ -13159,6 +13160,7 @@ and (max-width: 768px) {
     }
 
     .add-to-cart {
+        background-size: 16px !important;
         position: absolute;
         bottom: 25px;
         right: 0px;
